--- a/Pipfile
+++ b/Pipfile
@@ -4,8 +4,19 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+pylint = "*"
+black = "*"
+mypy = "*"
+flake8 = "*"
 
 [packages]
+docopt = "*"
+PyYAML = "*"
+requests = "*"
+beautifulsoup4 = "*"
 
 [requires]
 python_version = "3.7"
+
+[pipenv]
+allow_prereleases = true
