--- a/dataset/explore/services/airbrake.yml
+++ b/dataset/explore/services/airbrake.yml
@@ -2,24 +2,27 @@
   logo_url: https://airbrake.io/docs/assets/img/logos/airbrake-logo.svg
   homepage_url: https://airbrake.io
   packages:
-	  - name: Sharpbrake.Client
-      official: yes
-	  - name: Sharpbrake.Extensions.Logging
-      integration: yes
-	  - name: Sharpbrake.Http.Middleware
-      integration: yes
-	  - name: Sharpbrake.Http.Module
-      integration: yes
-	  - name: Sharpbrake.Log4net
-      integration: yes
-	  - name: Sharpbrake.Log4net.Web
-      integration: yes
-	  - name: Sharpbrake.NLog
-      integration: yes
-	  - name: Sharpbrake.NLog.Web
-      integration: yes
+  - name: Sharpbrake.Client
+    official: true
+  - name: Sharpbrake.Extensions.Logging
+    integration: true
+  - name: Sharpbrake.Http.Middleware
+    integration: true
+  - name: Sharpbrake.Http.Module
+    integration: true
+  - name: Sharpbrake.Log4net
+    integration: true
+  - name: Sharpbrake.Log4net.Web
+    integration: true
+  - name: Sharpbrake.NLog
+    integration: true
+  - name: Sharpbrake.NLog.Web
+    integration: true
   tags:
-    - application monitoring
-    - logging
+  - application monitoring
+  - logging
   links:
-    - https://airbrake.io/docs/installing-airbrake/installing-airbrake-in-a-net-application/
+  - url: https://airbrake.io/docs/installing-airbrake/installing-airbrake-in-a-net-application/
+    title: .NET - Airbrake
+  description: "Application monitoring software for your entire stack. Fix errors\
+    \ in minutes. Airbrake tells you in real-time what\u2019s broken, where and why."
