--- a/.editorconfig
+++ b/.editorconfig
@@ -13,3 +13,19 @@ indent_size = 4
 [*.mk]
 indent_style = tab
 indent_size = 4
+
+[*.py]
+charset = utf-8
+indent_style = space
+indent_size = 4
+end_of_line = lf
+insert_final_newline = true
+trim_trailing_whitespace = true
+
+[*.yaml]
+charset = utf-8
+indent_style = space
+indent_size = 2
+end_of_line = lf
+insert_final_newline = true
+trim_trailing_whitespace = true
