Explore data update

--- a/dataset/explore/services/cassandra.yml
+++ b/dataset/explore/services/cassandra.yml
@@ -15,4 +15,4 @@
     across multiple datacenters is best-in-class, providing lower latency for your
     users and the peace of mind of knowing that you can survive regional outages.
   links: ~
-  logo_url: https://acrobat.adobe.com/content/dam/dx-dc/favicons/favicon.ico
+  logo_url: https://cassandra.apache.org/img/cassandra_logo.png
