--- a/dataset/explore/services/amazon_app_mesh.yml
+++ b/dataset/explore/services/amazon_app_mesh.yml
@@ -10,4 +10,6 @@
   - appmesh
   description: AWS App Mesh is a service mesh that allows you to easily monitor and
     control communications across services.
-  links: ~
+  links:
+  - url: https://twitter.com/awscloud
+    title: Twitter
