--- a/dataset/explore/services/druid.yml
+++ b/dataset/explore/services/druid.yml
@@ -5,6 +5,10 @@
   tags:
   - real-time analytics
   - database
-  description: Apache Druid is a column-oriented, open-source, distributed data store written in Java. Druid is designed to quickly ingest massive quantities of event data, and provide low-latency queries on top of the data.
-  links: ~
+  description: Apache Druid is a column-oriented, open-source, distributed data store
+    written in Java. Druid is designed to quickly ingest massive quantities of event
+    data, and provide low-latency queries on top of the data.
+  links:
+  - url: https://twitter.com/druidio
+    title: Twitter
   logo_url: https://druid.apache.org/img/favicon.png
