--- a/dataset/explore/services/event_store.yml
+++ b/dataset/explore/services/event_store.yml
@@ -10,4 +10,6 @@
   links:
   - url: https://eventstore.com/docs/dotnet-api/index.html
     title: Overview | Event Store
+  - url: https://twitter.com/eventstore
+    title: Twitter
   logo_url: https://eventstore.com/images/eventstore-og-grey.png
