--- a/dataset/explore/services/amazon_athena.yml
+++ b/dataset/explore/services/amazon_athena.yml
@@ -11,4 +11,6 @@
   description: Amazon Athena is a serverless, interactive query service to query data
     and analyze big data in Amazon S3 using standard SQL. Most results are delivered
     within seconds.
-  links: ~
+  links:
+  - url: https://twitter.com/awscloud
+    title: Twitter
