--- a/dataset/explore/services/amazon_cloudfront.yml
+++ b/dataset/explore/services/amazon_cloudfront.yml
@@ -11,5 +11,7 @@
   description: Amazon CloudFront is a fast content delivery network (CDN) service
     that securely delivers data, videos, applications, and APIs to customers globally
     with low latency, high transfer speeds, all within a developer friendly environment.
-  links: ~
+  links:
+  - url: https://twitter.com/awscloud
+    title: Twitter
   logo_url: https://a0.awsstatic.com/libra-css/images/logos/aws_logo_smile_1200x630.png
