--- a/dataset/explore/services/amazon_cloudsearch.yml
+++ b/dataset/explore/services/amazon_cloudsearch.yml
@@ -11,5 +11,7 @@
   description: Quickly add rich, scalable search capabilities to your website or application
     with support for 34 languages and search features like highlighting, autocomplete,
     and geospatial search.
-  links: ~
+  links:
+  - url: https://twitter.com/awscloud
+    title: Twitter
   logo_url: https://a0.awsstatic.com/main/images/logos/aws_logo_smile_1200x630.png
