--- a/dataset/explore/services/couchbase.yml
+++ b/dataset/explore/services/couchbase.yml
@@ -12,4 +12,8 @@
   - url: https://docs.couchbase.com/dotnet-sdk/3.0/hello-world/start-using-sdk.html
     title: Install and Start Using the .NET SDK with Couchbase Server | Couchbase
       Docs
+  - url: https://twitter.com/couchbase
+    title: Twitter
+  - url: https://github.com/couchbase
+    title: GitHub
   logo_url: https://www.couchbase.com/webfiles/1589463545929/images/icons/favicon/apple-icon-57x57.png
