--- a/dataset/explore/services/gitlab.yml
+++ b/dataset/explore/services/gitlab.yml
@@ -8,9 +8,10 @@
   - gitlab
   - monitoring
   - version control
-  description: "From project planning and source code management to CI/CD\
-    \ and monitoring, GitLab is a complete DevOps platform, delivered as a single\
-    \ application. Only GitLab enables Concurrent DevOps to make the software lifecycle\
-    \ 200% faster."
-  links: ~
+  description: From project planning and source code management to CI/CD and monitoring,
+    GitLab is a complete DevOps platform, delivered as a single application. Only
+    GitLab enables Concurrent DevOps to make the software lifecycle 200% faster.
+  links:
+  - url: https://twitter.com/gitlab
+    title: Twitter
   logo_url: https://about.gitlab.com/images/blogimages/gitlab-blog-cover.png
