--- a/dataset/explore/services/newrelic.yml
+++ b/dataset/explore/services/newrelic.yml
@@ -10,3 +10,4 @@
   description: Work smarter and solve problems faster with a unified view of your
     software and systems.
   logo_url: https://newrelic.com/content/dam/new-relic/opengraph/NROG_Image.png
+  links: ~
