--- a/dataset/explore/services/pagerduty.yml
+++ b/dataset/explore/services/pagerduty.yml
@@ -9,5 +9,7 @@
   description: See how PagerDuty's Platform for Real-Time Operations integrates machine
     data & human intelligence to improve visibility & agility across organizations.
     Sign up for a free 14 day trial!
-  links: ~
+  links:
+  - url: https://twitter.com/pagerduty
+    title: Twitter
   logo_url: https://www.pagerduty.com/wp-content/uploads/2019/09/Brand_Launch_Blog_Social_share_image.png
