Explore data update

--- a/dataset/explore/services/adobe_sign.yml
+++ b/dataset/explore/services/adobe_sign.yml
@@ -10,4 +10,6 @@
   links:
   - url: https://acrobat.adobe.com/us/en/sign/developer-form.html
     title: Create Developer Account, APIs for custom applications | Adobe Sign
+  - url: https://twitter.com/AdobeDocCloud
+    title: Twitter
   logo_url: https://acrobat.adobe.com/content/dam/dx-dc/favicons/favicon.ico
