--- a/dataset/explore/services/adyen.yml
+++ b/dataset/explore/services/adyen.yml
@@ -11,5 +11,7 @@
     title: Libraries | Adyen Docs
   - url: https://docs.adyen.com/developers/checkout
     title: Online payments | Adyen Docs
+  - url: https://twitter.com/Adyen
+    title: Twitter
   description: We provide a single payments platform globally to accept payments and
     grow revenue online, on mobile, and at the point of sale.
