--- a/dataset/explore/services/azure_app_services.yml
+++ b/dataset/explore/services/azure_app_services.yml
@@ -13,3 +13,5 @@
   links:
   - url: https://docs.microsoft.com/en-us/azure/app-service/overview-hosting-plans
     title: App Service plans - Azure App Service | Microsoft Docs
+  - url: https://twitter.com/azure
+    title: Twitter
