--- a/dataset/explore/services/bonsai.yml
+++ b/dataset/explore/services/bonsai.yml
@@ -14,4 +14,8 @@
   links:
   - url: https://docs.bonsai.io/article/104-dot-net
     title: .NET - bonsai
+  - url: https://twitter.com/bonsaisearch
+    title: Twitter
+  - url: https://github.com/omc
+    title: GitHub
   logo_url: https://bonsai.io/img/og/default-social-share-facebook.jpg
