--- a/dataset/explore/services/clickhouse.yml
+++ b/dataset/explore/services/clickhouse.yml
@@ -13,3 +13,7 @@
   links:
   - url: https://clickhouse.tech/docs/en/
     title: Overview - ClickHouse Documentation
+  - url: https://twitter.com/ClickHouseDB
+    title: Twitter
+  - url: https://github.com/ClickHouse/ClickHouse
+    title: GitHub
