--- a/dataset/explore/services/github.yml
+++ b/dataset/explore/services/github.yml
@@ -11,4 +11,6 @@
   links:
   - url: https://developer.github.com
     title: GitHub Developer | GitHub Developer Guide
+  - url: https://twitter.com/github
+    title: Twitter
   logo_url: https://github.githubassets.com/images/modules/open_graph/github-logo.png
