--- a/dataset/explore/services/slack.yml
+++ b/dataset/explore/services/slack.yml
@@ -10,4 +10,6 @@
   links:
   - url: https://api.slack.com
     title: Slack API | Slack
+  - url: https://twitter.com/slackhq
+    title: Twitter
   logo_url: https://a.slack-edge.com/80588/marketing/img/meta/favicon-32.png
