--- a/dataset/explore/services/azure_batch.yml
+++ b/dataset/explore/services/azure_batch.yml
@@ -10,6 +10,8 @@
   links:
   - url: https://docs.microsoft.com/en-us/azure/batch
     title: Azure Batch documentation - Azure Batch | Microsoft Docs
+  - url: https://twitter.com/azure
+    title: Twitter
   description: "Invent with purpose, realize cost savings, and make your organization\
     \ more efficient with Microsoft Azure\u2019s open and flexible cloud computing\
     \ platform."
