--- a/dataset/explore/services/confluent_platform.yml
+++ b/dataset/explore/services/confluent_platform.yml
@@ -14,4 +14,8 @@
     title: "What is Confluent Platform? \u2014 Confluent Platform"
   - url: https://docs.confluent.io/current/clients/index.html
     title: "Kafka Clients \u2014 Confluent Platform"
+  - url: https://twitter.com/ConfluentInc
+    title: Twitter
+  - url: https://github.com/confluentinc
+    title: GitHub
   logo_url: https://cdn.confluent.io/wp-content/uploads/seo-logo-meadow.png
