--- a/dataset/explore/services/google_cloud_data_catalog.yml
+++ b/dataset/explore/services/google_cloud_data_catalog.yml
@@ -12,4 +12,6 @@
   links:
   - url: https://cloud.google.com/dotnet/docs
     title: .NET on Google Cloud | Developer Tools
+  - url: https://github.com/GoogleCloudPlatform/datacatalog-connectors
+    title: GitHub
   logo_url: https://cloud.google.com/images/social-icon-google-cloud-1200-630.png
