--- a/dataset/explore/services/servicenow.yml
+++ b/dataset/explore/services/servicenow.yml
@@ -9,4 +9,6 @@
   links:
   - url: https://developer.servicenow.com/dev.do
     title: ServiceNow Developers
+  - url: https://twitter.com/servicenow
+    title: Twitter
   logo_url: https://www.servicenow.com/content/dam/servicenow-assets/public/en-us/images/og-images/favicon.ico
