--- a/dataset/explore/services/amazon_iam_access_analyzer.yml
+++ b/dataset/explore/services/amazon_iam_access_analyzer.yml
@@ -12,4 +12,4 @@
   links:
   - url: https://docs.aws.amazon.com/IAM/latest/UserGuide/what-is-access-analyzer.html
     title: What Is AWS IAM Access Analyzer? - AWS Identity and Access Management
-  logo_url: https://docs.aws.amazon.com/assets/images/favicon.ico
+  logo_url: https://typedescriptor.net/static/onbrand/logos/a/amazon-web-services-8108d5725d48.svg
