--- a/dataset/explore/services/apache_hbase.yml
+++ b/dataset/explore/services/apache_hbase.yml
@@ -9,4 +9,4 @@
   - hadoop
   description: Apache HBase™ is the Hadoop database, a distributed, scalable, big data store.
   links: ~
-  logo_url: https://hbase.apache.org/images/favicon.ico
+  logo_url: https://typedescriptor.net/static/onbrand/logos/a/apache-hbase-3b02690ca2ae.svg
