--- a/dataset/explore/services/bonsai.yml
+++ b/dataset/explore/services/bonsai.yml
@@ -18,4 +18,4 @@
     title: Twitter
   - url: https://github.com/omc
     title: GitHub
-  logo_url: https://bonsai.io/img/og/default-social-share-facebook.jpg
+  logo_url: https://typedescriptor.net/static/onbrand/logos/b/bonsai-io-2d850dace619.svg
