--- a/dataset/explore/services/cassandra.yml
+++ b/dataset/explore/services/cassandra.yml
@@ -17,4 +17,4 @@
   links:
   - url: https://twitter.com/cassandra
     title: Twitter
-  logo_url: https://cassandra.apache.org/img/cassandra_logo.png
+  logo_url: https://typedescriptor.net/static/onbrand/logos/a/apache-cassandra-fc9a9a69c2d3.svg
