--- a/dataset/explore/services/configcat.yml
+++ b/dataset/explore/services/configcat.yml
@@ -15,4 +15,4 @@
     title: Twitter
   - url: https://github.com/configcat
     title: GitHub
-  logo_url: https://configcat.com/images/shared/home.png
+  logo_url: https://typedescriptor.net/static/onbrand/logos/c/configcat-d5392f7d0238.svg
