--- a/dataset/explore/services/confluent_platform.yml
+++ b/dataset/explore/services/confluent_platform.yml
@@ -18,4 +18,4 @@
     title: Twitter
   - url: https://github.com/confluentinc
     title: GitHub
-  logo_url: https://cdn.confluent.io/wp-content/uploads/seo-logo-meadow.png
+  logo_url: https://typedescriptor.net/static/onbrand/logos/c/confluent-bf5dda3a2aa7.svg
