--- a/dataset/explore/services/couch.yml
+++ b/dataset/explore/services/couch.yml
@@ -17,4 +17,4 @@
     title: Twitter
   - url: https://github.com/apache?q=couchdb
     title: GitHub
-  logo_url: https://couchdb.apache.org/apple-touch-icon.png?v=rM3dEe7aPK
+  logo_url: https://typedescriptor.net/static/onbrand/logos/a/apache-couchdb-2ae7a382d82b.svg
