--- a/dataset/explore/services/couchbase.yml
+++ b/dataset/explore/services/couchbase.yml
@@ -16,4 +16,4 @@
     title: Twitter
   - url: https://github.com/couchbase
     title: GitHub
-  logo_url: https://www.couchbase.com/webfiles/1589463545929/images/icons/favicon/apple-icon-57x57.png
+  logo_url: https://typedescriptor.net/static/onbrand/logos/c/couchbase-ac6936433f91.svg
