--- a/dataset/explore/services/elasticsearch.yml
+++ b/dataset/explore/services/elasticsearch.yml
@@ -16,4 +16,5 @@
     title: Elasticsearch Clients | Elastic
   - url: https://github.com/elastic/elasticsearch-net
     title: GitHub
-  logo_url: https://www.elastic.co/static/images/elastic-logo-200.png
+  logo_url: https://typedescriptor.net/static/onbrand/logos/e/elasticsearch-5a9ff1817c57.svg
+  onbrand/status: REDUCTIVE
