--- a/dataset/explore/services/etcd.yml
+++ b/dataset/explore/services/etcd.yml
@@ -12,4 +12,4 @@
   links:
   - url: https://github.com/etcd-io/etcd
     title: GitHub
-  logo_url: https://raw.githubusercontent.com/cncf/artwork/master/projects/etcd/horizontal/color/etcd-horizontal-color.png
+  logo_url: https://typedescriptor.net/static/onbrand/logos/e/etcd-50b47db2f9b4.svg
