--- a/dataset/explore/services/event_store.yml
+++ b/dataset/explore/services/event_store.yml
@@ -12,4 +12,4 @@
     title: Overview | Event Store
   - url: https://twitter.com/eventstore
     title: Twitter
-  logo_url: https://eventstore.com/images/eventstore-og-grey.png
+  logo_url: https://typedescriptor.net/static/onbrand/logos/e/eventstoredb-33d40429c473.svg
