--- a/dataset/explore/services/github.yml
+++ b/dataset/explore/services/github.yml
@@ -13,4 +13,4 @@
     title: GitHub Developer | GitHub Developer Guide
   - url: https://twitter.com/github
     title: Twitter
-  logo_url: https://github.githubassets.com/images/modules/open_graph/github-logo.png
+  logo_url: https://typedescriptor.net/static/onbrand/logos/g/github-3d730882191c.svg
