--- a/dataset/explore/services/gitlab.yml
+++ b/dataset/explore/services/gitlab.yml
@@ -14,4 +14,4 @@
   links:
   - url: https://twitter.com/gitlab
     title: Twitter
-  logo_url: https://about.gitlab.com/images/blogimages/gitlab-blog-cover.png
+  logo_url: https://typedescriptor.net/static/onbrand/logos/g/gitlab-327233ab53b0.svg
