--- a/dataset/explore/services/ibm_mq.yml
+++ b/dataset/explore/services/ibm_mq.yml
@@ -11,4 +11,4 @@
   links:
   - url: https://www.ibm.com/support/knowledgecenter/SSFKSJ_9.2.0/com.ibm.mq.dev.doc/q132490_.htm
     title: IBM Knowledge Center
-  logo_url: https://1.cms.s81c.com/sites/default/files/2019-07-18/ibm-mq-on-cloud-leadspace1_0.jpg
+  logo_url: https://typedescriptor.net/static/onbrand/logos/i/ibm-5408a7d0d311.svg
