--- a/dataset/explore/services/iis.yml
+++ b/dataset/explore/services/iis.yml
@@ -8,4 +8,5 @@
   description: Learn, download, & discuss IIS7 and more on the official Microsoft
     IIS site for the IIS.NET development community.
   links: ~
-  logo_url: https://docs.microsoft.com/en-us/media/logos/logo-ms-social.png
+  logo_url: https://typedescriptor.net/static/onbrand/logos/m/microsoft-c4a4acdd463f.svg
+  onbrand/status: REDUCTIVE
