--- a/dataset/explore/services/maxmind.yml
+++ b/dataset/explore/services/maxmind.yml
@@ -10,4 +10,4 @@
   links:
   - url: https://twitter.com/maxmind
     title: Twitter
-  logo_url: https://static.maxmind.com/963fee16f9b4d9e24de7/images/maxmind-header-logo.svg
+  logo_url: https://typedescriptor.net/static/onbrand/logos/m/maxmind-19e8feb20c74.svg
