--- a/dataset/explore/services/maxmind_minfraud.yml
+++ b/dataset/explore/services/maxmind_minfraud.yml
@@ -12,4 +12,4 @@
   links:
   - url: https://twitter.com/maxmind
     title: Twitter
-  logo_url: https://mm-staticassets.storage.googleapis.com/963fee16f9b4d9e24de7/js/marketing/static/minfraud/logo.svg
+  logo_url: https://typedescriptor.net/static/onbrand/logos/m/maxmind-minfraud-24e3731fbd7e.svg
