--- a/dataset/explore/services/newrelic.yml
+++ b/dataset/explore/services/newrelic.yml
@@ -7,7 +7,7 @@
   - newrelic
   description: Work smarter and solve problems faster with a unified view of your
     software and systems.
-  logo_url: https://newrelic.com/content/dam/new-relic/opengraph/NROG_Image.png
+  logo_url: https://typedescriptor.net/static/onbrand/logos/n/newrelic-3dc2f8e68838.svg
   links:
   - url: https://github.com/newrelic
     title: GitHub
