--- a/dataset/explore/services/pagerduty.yml
+++ b/dataset/explore/services/pagerduty.yml
@@ -12,4 +12,4 @@
   links:
   - url: https://twitter.com/pagerduty
     title: Twitter
-  logo_url: https://www.pagerduty.com/wp-content/uploads/2019/09/Brand_Launch_Blog_Social_share_image.png
+  logo_url: https://typedescriptor.net/static/onbrand/logos/p/pagerduty-3443530c7089.svg
