--- a/dataset/explore/services/ravendb.yml
+++ b/dataset/explore/services/ravendb.yml
@@ -11,4 +11,4 @@
   links:
   - url: https://twitter.com/ravendb
     title: Twitter
-  logo_url: https://ravendb.net/img/metadata.png
+  logo_url: https://typedescriptor.net/static/onbrand/logos/r/ravendb-37ee617164d8.svg
