--- a/dataset/explore/services/rundeck.yml
+++ b/dataset/explore/services/rundeck.yml
@@ -14,4 +14,4 @@
     title: API Reference | Rundeck Docs
   - url: https://twitter.com/rundeck
     title: Twitter
-  logo_url: https://www.rundeck.com/hubfs/identity/favicons/Rundeck-favicon.png
+  logo_url: https://typedescriptor.net/static/onbrand/logos/r/rundeck-a6d7e5a1d6fe.svg
