--- a/dataset/explore/services/sentry.yml
+++ b/dataset/explore/services/sentry.yml
@@ -15,4 +15,4 @@
     title: Twitter
   - url: https://github.com/getsentry/
     title: GitHub
-  logo_url: https://www.sentry.dev/_assets2/static/index-1e7a4349067ba590c6841d7a2ada0013.jpg
+  logo_url: https://typedescriptor.net/static/onbrand/logos/s/sentry-fc5cce65aec5.svg
