--- a/dataset/explore/services/steeltoe.yml
+++ b/dataset/explore/services/steeltoe.yml
@@ -9,4 +9,4 @@
   description: Create .NET microservices for modern platforms with Steeltoe. It's
     a friend of Spring Cloud and can be used anywhere.
   links: ~
-  logo_url: https://steeltoe.io/images/favicon.png
+  logo_url: https://typedescriptor.net/static/onbrand/logos/s/steeltoe-io-5ce0d587eb37.svg
