--- a/dataset/explore/services/adobe_sign.yml
+++ b/dataset/explore/services/adobe_sign.yml
@@ -12,4 +12,4 @@
     title: Create Developer Account, APIs for custom applications | Adobe Sign
   - url: https://twitter.com/AdobeDocCloud
     title: Twitter
-  logo_url: https://acrobat.adobe.com/content/dam/dx-dc/favicons/favicon.ico
+  logo_url: https://typedescriptor.net/static/onbrand/logos/a/adobe-acrobat-f02e24a396bf.svg
