--- a/dataset/explore/services/amazon_cloudsearch.yml
+++ b/dataset/explore/services/amazon_cloudsearch.yml
@@ -14,4 +14,4 @@
   links:
   - url: https://twitter.com/awscloud
     title: Twitter
-  logo_url: https://a0.awsstatic.com/main/images/logos/aws_logo_smile_1200x630.png
+  logo_url: https://typedescriptor.net/static/onbrand/logos/a/amazon-web-services-8108d5725d48.svg
