--- a/dataset/explore/services/clickhouse.yml
+++ b/dataset/explore/services/clickhouse.yml
@@ -1,5 +1,5 @@
 - service: ClickHouse
-  logo_url: https://clickhouse.tech/images/logo.png
+  logo_url: https://typedescriptor.net/static/onbrand/logos/c/clickhouse-c2a9ea925fe5.svg
   homepage_url: https://clickhouse.tech/
   packages:
   - name: ClickHouse.Net
