--- a/dataset/explore/services/exchange.yml
+++ b/dataset/explore/services/exchange.yml
@@ -9,4 +9,4 @@
   description: Exchange business-class email helps increase user productivity while
     protecting your data. Get it as a hosted service or run it on your servers.
   links: ~
-  logo_url: https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE2mzwk?ver=ad52&q=90&h=40&b=%23FFFFFFFF&aim=true
+  logo_url: https://typedescriptor.net/static/onbrand/logos/m/microsoft-exchange-288d8a69e996.svg
