--- a/dataset/explore/services/google_cloud_bigtable.yml
+++ b/dataset/explore/services/google_cloud_bigtable.yml
@@ -20,4 +20,4 @@
     title: .NET on Google Cloud
   - url: https://cloud.google.com/bigtable/docs
     title: Cloud Bigtable documentation | Cloud Bigtable Documentation
-  logo_url: https://cloud.google.com/images/social-icon-google-cloud-1200-630.png
+  logo_url: https://typedescriptor.net/static/onbrand/logos/g/google-cloud-2c89e31d83ec.svg
