--- a/dataset/explore/services/google_cloud_container_analysis.yml
+++ b/dataset/explore/services/google_cloud_container_analysis.yml
@@ -15,4 +15,4 @@
     title: Container Analysis | Container Registry Documentation | Google Cloud
   - url: https://cloud.google.com/dotnet/docs
     title: .NET on Google Cloud | Developer Tools
-  logo_url: https://cloud.google.com/images/social-icon-google-cloud-1200-630.png
+  logo_url: https://typedescriptor.net/static/onbrand/logos/g/google-cloud-2c89e31d83ec.svg
