--- a/dataset/explore/services/google_cloud_data_catalog.yml
+++ b/dataset/explore/services/google_cloud_data_catalog.yml
@@ -14,4 +14,4 @@
     title: .NET on Google Cloud | Developer Tools
   - url: https://github.com/GoogleCloudPlatform/datacatalog-connectors
     title: GitHub
-  logo_url: https://cloud.google.com/images/social-icon-google-cloud-1200-630.png
+  logo_url: https://typedescriptor.net/static/onbrand/logos/g/google-cloud-2c89e31d83ec.svg
