--- a/dataset/explore/services/google_cloud_dataproc.yml
+++ b/dataset/explore/services/google_cloud_dataproc.yml
@@ -16,4 +16,4 @@
     title: .NET on Google Cloud | Developer Tools
   - url: https://cloud.google.com/dataproc/docs
     title: Dataproc documentation | Dataproc Documentation | Google Cloud
-  logo_url: https://cloud.google.com/images/social-icon-google-cloud-1200-630.png
+  logo_url: https://typedescriptor.net/static/onbrand/logos/g/google-cloud-2c89e31d83ec.svg
