--- a/dataset/explore/services/google_cloud_dlp.yml
+++ b/dataset/explore/services/google_cloud_dlp.yml
@@ -1,4 +1,4 @@
-- service: Google Data Loss Prevention API
+- service: Google Cloud Data Loss Prevention API
   homepage_url: https://cloud.google.com/dlp
   packages:
   - name: Google.Cloud.Dlp.V2
@@ -14,4 +14,4 @@
     title: .NET on Google Cloud | Developer Tools
   - url: https://cloud.google.com/dlp/docs
     title: Cloud Data Loss Prevention (DLP) documentation
-  logo_url: https://cloud.google.com/images/social-icon-google-cloud-1200-630.png
+  logo_url: https://typedescriptor.net/static/onbrand/logos/g/google-cloud-2c89e31d83ec.svg
