--- a/dataset/explore/services/google_cloud_gaming.yml
+++ b/dataset/explore/services/google_cloud_gaming.yml
@@ -11,6 +11,5 @@
   links:
   - url: https://cloud.google.com/dotnet/docs
     title: .NET on Google Cloud | Developer Tools
-  - url: https://cloud.google.com/dataproc/docs
-    title: Dataproc documentation | Dataproc Documentation | Google Cloud
-  logo_url: https://cloud.google.com/images/social-icon-google-cloud-1200-630.png
+  - url: https://cloud.google.com/solutions/gaming
+  logo_url: https://typedescriptor.net/static/onbrand/logos/g/google-cloud-2c89e31d83ec.svg
