--- a/dataset/explore/services/google_cloud_memorystore.yml
+++ b/dataset/explore/services/google_cloud_memorystore.yml
@@ -11,4 +11,4 @@
   links:
   - url: https://cloud.google.com/dotnet/docs
     title: .NET on Google Cloud
-  logo_url: https://cloud.google.com/images/social-icon-google-cloud-1200-630.png
+  logo_url: https://typedescriptor.net/static/onbrand/logos/g/google-cloud-2c89e31d83ec.svg
