--- a/dataset/explore/services/servicenow.yml
+++ b/dataset/explore/services/servicenow.yml
@@ -11,4 +11,4 @@
     title: ServiceNow Developers
   - url: https://twitter.com/servicenow
     title: Twitter
-  logo_url: https://www.servicenow.com/content/dam/servicenow-assets/public/en-us/images/og-images/favicon.ico
+  logo_url: https://typedescriptor.net/static/onbrand/logos/s/servicenow-3a93dfd2491a.svg
