--- a/dataset/explore/services/slack.yml
+++ b/dataset/explore/services/slack.yml
@@ -12,4 +12,4 @@
     title: Slack API | Slack
   - url: https://twitter.com/slackhq
     title: Twitter
-  logo_url: https://a.slack-edge.com/80588/marketing/img/meta/favicon-32.png
+  logo_url: https://typedescriptor.net/static/onbrand/logos/s/slack-cff9417e5153.svg
