--- a/.envrc
+++ b/.envrc
@@ -10,9 +10,25 @@
 # PATH         Allows ./bin to be added to path
 # BUILD_FIRST  Whether to build before running
 #
-# NUGET_SOURCE_URL
-#
+
 project_dir=$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)
 
-export PATH="$project_dir/bin:$PATH"
-export BUILD_FIRST=1
+export PATH="$project_dir/bin:${project_dir}-sauce/bin:$PATH"
+
+if [[ -f .credentials.envrc ]]; then
+    . .credentials.envrc
+fi
+
+# Support python virtualenv
+if command -v pipenv; then
+    . "$(pipenv --venv)/bin/activate"
+else
+    # Terminal output formatting
+    _RESET="\x1b[39m"
+    _RED="\x1b[31m"
+
+    printf "${_RED}warning${_RESET}: Pipenv not setup"
+fi
+
+# Interoperate with tools that set the prompt
+unset PS1
