--- a/.editorconfig
+++ b/.editorconfig
@@ -6,23 +6,7 @@ indent_style = space
 indent_size = 2
 trim_trailing_whitespace = true
 
-[Makefile]
-indent_style = tab
-indent_size = 4
-
-[*.mk]
-indent_style = tab
-indent_size = 4
-
-[*.py]
-charset = utf-8
-indent_style = space
-indent_size = 4
-end_of_line = lf
-insert_final_newline = true
-trim_trailing_whitespace = true
-
-[*.yaml]
+[*.{yml,yaml}]
 charset = utf-8
 indent_style = space
 indent_size = 2
